February monthly update!

--- a/changelog.html
+++ b/changelog.html
@@ -68,14 +68,15 @@
 							</header>
 						</div>
 						<div class="6u$ 12u$(medium)">
-							<p><strong>Latest revision date: Jan. 5th, 2017</strong>
+							<p><strong>Latest revision date: Feb. 25th, 2017</strong>
+							<li>R4.8 - Updated information on index.html to more accurately reflect my progress through projects and education!</li>
 							<li>R4.7 - Added a dropdown toolbar for "Tools" - random features
 							 I plan to add to gradually such as GPA calculator, bibliography generator,
-							 DnD Dice Roller, etc.
-							<li>R4.6 - Internship search preparation and classes.html added.
+							 DnD Dice Roller, etc.</li>
+							<li>R4.6 - Internship search preparation and classes.html added.</li>
 							<li>R4.5 - Updated and renamed about.html to feel more personal,
-							 adding to projects.html as of Summer 2016.
-							<li>R4.4 - Cleaned up code, added basic content to About, Projects, and 61A.
+							 adding to projects.html as of Summer 2016.</li>
+							<li>R4.4 - Cleaned up code, added basic content to About, Projects, and 61A.</li>
 							<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
 							<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
 							<li>R4.1a - Custom error pages got added for fun.</li>
@@ -101,7 +102,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
-						<li><a href="changelog.html">R4.7</a>
+						<li><a href="changelog.html">R4.8</a>
 						<li>Theme: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
