--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<section id="banner">
 			<h2>Bryan Tong</h2>
 			<p class="class2">Studying CogSci at UC Berkeley</p>
-			<p>Designer, Coder, &amp; Entrepreneur</p>
+			<p>Student, Full-Stack, &amp; UX Designer</p>
 			<ul class="actions">
 				<li><a href="#about" class="button">Who?</a></li>
 			</ul>
@@ -96,7 +96,7 @@
 			<div class="container">
 				<header class="major special">
 					<h2>My Passions</h2>
-					<p>Current interests and projects</p>
+					<p>Current projects and interests</p>
 				</header>
 				<div class="feature-grid">
 					<div class="feature">
@@ -106,17 +106,17 @@
 								<h4>Virtual &amp; Augmented Reality</h4>
 								<p>A new medium of education and play</p>
 							</header>
-							<p>This semester, I joined Virtual Reality at Berkeley to work on their <a href="https://www.youtube.com/watch?v=V0Pko38LDdw">Augmented Reality Textbooks</a> project.  We're starting to refine this new, interactive medium of learning.</p>
+							<p>This semester, I'm the incoming team lead for an <a href="https://www.youtube.com/watch?v=V0Pko38LDdw">Augmented Reality Textbooks</a> project.  We're refining this new, interactive medium of learning with networked sessions and a clean UI.</p>
 						</div>
 					</div>
 					<div class="feature">
 						<div class="image rounded"><img src="images/pic05.jpg" alt="Bryan Tong - Entrepreneur"/></div>
 						<div class="content">
 							<header>
-								<h4>Entrepreneurship &amp; Management</h4>
-								<p>Connected, understanding, efficient</p>
+								<h4>Full-Stack Development</h4>
+								<p>From Python to Assembly</p>
 							</header>
-							<p>When my dad lost his job during the recession, I gained my first taste of entrepreneurship.  My apparel startup quickly acquired international recognition with 5-figure revenue.</p>
+							<p>I'm quickly learning to embrace assembly and the joy of debugging it on a Raspberry Pi 3.  So far this semester, I've completed a spellchecker in C, a MIPS Assembler + Linker, and a few iOS apps in Swift.</p>
 						</div>
 					</div>
 					<div class="feature">
@@ -144,6 +144,7 @@
 				    <ul class="actions">
 					    <li><a href="projects.html" class="button special big">Projects</a></li>
 					    <li><a href="/resume.pdf" class="button big">&nbsp; Résumé &nbsp;</a></li>
+						<li><a href="tools.html" class="button special big">Utilities</a></li>
 				    </ul>
 		        </section>
 			</div>
@@ -220,7 +221,7 @@
 				<ul class="copyright">
 					<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
 					<!--<li><a href="changelog.html" class="button alt small">R4.7</a></li>-->
-					<li><a href="changelog.html">R4.7</a>
+					<li><a href="changelog.html">R4.8</a>
 					<li>Theme: <a href="http://templated.co">TEMPLATED</a></li>
 				</ul>
 			</div>
