--- a/dice.html
+++ b/dice.html
@@ -64,7 +64,7 @@
 					<li><a href="classes.html">Classes</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="tools.html">Tools</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="index.html#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
