--- a/changelog.html
+++ b/changelog.html
@@ -64,14 +64,35 @@
 						<div class="inner">
 						<div class="content"
 							<header class="major" align="center">
-								<h1>Generic Page</h1>
-								<p>Lorem ipsum dolor sit magna consectetur</p>
+								<h1>Changelog</h1>
+								<p>No longer a corporate homepage!</p>
 							</header>
 							</div>
-							<span class="image main"><img src="images/pic05.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<!--<span class="image main"><img src="images/pic05.jpg" alt="" /></span>-->
+							<p><h3>Latest revision date: May 20th, 2017</h3>
+							<li><strong>R5.0 - Complete redesign to integrate with hello.btong.me for recruiters.</strong></li>
+							<li>R4.8 - Updated information on index.html to more accurately reflect my progress through projects and education!</li>
+							<li>R4.7 - Added a dropdown toolbar for "Tools" - random features
+							 I plan to add to gradually such as GPA calculator, bibliography generator,
+							 DnD Dice Roller, etc.</li>
+							<li>R4.6 - Internship search preparation and classes.html added.</li>
+							<li>R4.5 - Updated and renamed about.html to feel more personal,
+							 adding to projects.html as of Summer 2016.</li>
+							<li>R4.4 - Cleaned up code, added basic content to About, Projects, and 61A.</li>
+							<li>R4.3 - Revised index.html, new footer layout, changelog.html added!</li>
+							<li>R4.2 - Ported to GitHub and hopefully this works better.</li>
+							<li>R4.1a - Custom error pages got added for fun.</li>
+							<li>R4 - Nicer graphics, usable contact box implemented.</li>
+							<li>R3 - First round of updated images, text, favicon.</li>
+							<li>R2 - Revised website to fit my personal use, 
+							using this beautiful new template to kickstart it.</li>
+							<li>R1 - Hello world!</li>
+							</p>
+							<footer>
+								<ul class="actions">
+									<li><a href="index.html" class="button big">Homepage</a></li>
+								</ul>
+							</footer>
 						</div>
 					</section>
 
