--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									</footer>
 								</div>
 							</section>
-							<section class="spotlight">
+							<section class="spotlight lined">
 								<span class="image"><img src="images/vrab.png" alt="" /></span>
 								<div class="content">
 									<header>
@@ -148,7 +148,7 @@
 									</footer>
 								</div>
 							</section>
-							<section class="spotlight">
+							<section class="spotlight lined">
 								<span class="image"><img src="images/kite.png" alt="" /></span>
 								<div class="content">
 									<header>
