Done for the day

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<p>I have many more various projects ranging from extensions, games, and gritty technical stuff!</p>
 							<footer>
 								<ul class="actions">
-									<li><a href="#" class="button">More Projects</a></li>
+									<li><a href="projects.html" class="button">More Projects</a></li>
 								</ul>
 							</footer>
 						</div>
