--- a/changelog.html
+++ b/changelog.html
@@ -68,9 +68,9 @@
 								<p>No longer a corporate homepage!</p>
 							</header>
 							</div>
-							<!--<span class="image main"><img src="images/pic05.jpg" alt="" /></span>-->
-							<p><h3>Latest revision date: May 20th, 2017</h3>
-							<li><strong>R5.0 - Complete redesign to integrate with hello.btong.me for recruiters.</strong></li>
+							<p><h3>Latest revision date: Aug 6th, 2017</h3>
+							<li><strong>R5.2 - Added Nokia internship, updated side-projects and website homepage layout.</strong></li>
+							<li>R5.0 - Complete redesign to integrate with hello.btong.me for recruiters.</li>
 							<li>R4.8 - Updated information on index.html to more accurately reflect my progress through projects and education!</li>
 							<li>R4.7 - Added a dropdown toolbar for "Tools" - random features
 							 I plan to add to gradually such as GPA calculator, bibliography generator,
