--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 							<div class="content">
 								<header>
 									<h1>Bryan Tong</h1>
-									<p>Student, Designer, &amp; Coder @ UC Berkeley<br />
-									VR/AR Software Engineer Intern @ Nokia<br />
-									Avid developer and gamer.</p>
+									<p style="margin:0;">Student, Designer, &amp; Coder @ UC Berkeley</p>
+									<p style="margin:0;">VR/AR Software Engineer Intern @ Nokia</p>
+									<p style="margin:0;">Avid developer and gamer.</p>
 								</header>
 								<!--<footer>
 									<ul class="actions">
@@ -83,16 +83,9 @@
 					<section class="wrapper style2 special">
 						<div class="inner">
 							<header>
-								<h2>My Interests</h2>
-								<p>A summary of my current interests and passions.</p>
+								<h2>About Me</h2>
 							</header>
 							<ul class="icons major style2">
-								<li><span class="icon fa-code"><span class="label">Coder</span></span></li><li>
-								<span class="icon fa-gamepad"><span class="label">Gamer</span></span></li><li>
-								<span class="icon fa-paint-brush"><span class="label">Arist</span></span></li><li>
-								<span class="icon fa-camera-retro"><span class="label">Snapchatter</span></span></li><li>
-								<span class="icon fa-briefcase"><span class="label">Traveler</span></span></li>
-							</ul>
 							<p>
 							<i><script type="text/javascript">
 					            var d = new Date();
@@ -107,7 +100,7 @@
         					</script> </i> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with an EECS minor. Essentially, I'm learning a lot of computer science, HCI/AI, hardware, and UX related-things before I pursue an MBA to couple it with. Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.</p>
 							<footer>
 								<ul class="actions">
-									<li><a href="about.html" class="button">About Me</a></li>
+									<li><a href="about.html" class="button">More Bio</a></li>
 								</ul>
 							</footer>
 						</div>
@@ -152,9 +145,9 @@
 								<span class="image"><img src="images/kite.png" alt="" /></span>
 								<div class="content">
 									<header>
-										<h3>Co-Publisher, UX Designer<br />Kitelion Studios</h3>
+										<h3>Co-Founder, Developer<br />Kitelion Studios</h3>
 									</header>
-									<p>In collaboration with Eli from Kitelion Studios, we created Sunset Brawlers, a 2D mobile game filled with pixel brawling chaos.  What originally began as a gift to friends was nomindated for Indie Video Game of the Year!</p>
+									<p>Together with my friend Eli, we created and published Sunset Brawlers under Kitelion Games, LLC.  Sunset is a 2D mobile game filled with pixel brawling chaos.  What originally began as a gift to friends was nomindated for Indie Video Game of the Year!</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="http://sunsetbrawlers.com/" class="button">Details</a></li>
@@ -162,12 +155,21 @@
 									</footer>
 								</div>
 							</section>
-							<p>I have many more various projects ranging from extensions, games, and gritty technical stuff!</p>
-							<footer>
+							<header>
+								<h2>More Projects</h2>
+								<p>I have many, many more various projects ranging from extensions, games, and gritty technical stuff!</p>
+							</header>
 								<ul class="actions">
-									<li><a href="projects.html" class="button">More Projects</a></li>
+									<li><a href="projects.html" class="button">Discover More Projects</a></li>
 								</ul>
-							</footer>
+
+							<ul class="icons major style2">
+								<li><span class="icon fa-code"><span class="label">Coder</span></span></li><li>
+								<span class="icon fa-gamepad"><span class="label">Gamer</span></span></li><li>
+								<span class="icon fa-paint-brush"><span class="label">Arist</span></span></li><li>
+								<span class="icon fa-camera-retro"><span class="label">Snapchatter</span></span></li><li>
+								<span class="icon fa-briefcase"><span class="label">Traveler</span></span></li>
+							</ul>
 						</div>
 					</section>
 
