--- a/projects.html
+++ b/projects.html
@@ -66,8 +66,22 @@
 								<h2>Projects &amp; Experience</h2>
 								<p>A full list (of notable ones!)</p>
 							</header>
+							<section class="spotlight lined">
+								<span class="image"><img src="images/alexa.png" alt="Alexa Impressions" /></span>
+								<div class="content">
+									<header>
+										<h3>Developer<br />Amazon Alexa Skill - Boredom Solver</h3>
+									</header>
+									<p>A simple skill I made for Amazon's Alexa promotion.  It helps you solve boredom via decision trees and voice prompts.  Actually has generated a surprising amount of consistent usage!</p>
+									<footer>
+										<ul class="actions">
+											<li><a href="https://www.amazon.com/btong-me-Boredom-Solver/dp/B07482V679" class="button">Details</a></li>
+										</ul>
+									</footer>
+								</div>
+							</section>
 							<section class="spotlight">
-								<span class="image"><img src="images/nokia.jpeg" alt="" /></span>
+								<span class="image"><img src="images/nokia.jpeg" alt="Nokia Bell Labs" /></span>
 								<div class="content">
 									<header>
 										<h3>Software Engineering Intern<br />Nokia Bell Labs</h3>
@@ -136,7 +150,6 @@
 									</footer>
 								</div>
 							</section>
-	
 						</div>
 					</section>
 
