--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 							<div class="content">
 								<header>
 									<h1>Bryan Tong</h1>
-									<p style="margin:0;">Student, Designer, &amp; Coder @ UC Berkeley</p>
+									<p style="margin:0;">CS Student, Machine Structures Course Staff @ UC Berkeley</p>
 									<p style="margin:0;">VR/AR Software Engineer Intern @ Nokia</p>
-									<p style="margin:0;">Avid developer and gamer.</p>
+									<p style="margin:0;">Avid developer, AR/CV enthusiast, and gamer.</p>
 								</header>
 								<!--<footer>
 									<ul class="actions">
