--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
 							<div class="content">
 								<header>
 									<h1>Bryan Tong</h1>
-                                    <p style="margin:0;">Student, Designer, &amp; Coder @ UC Berkeley</p>
 									<p style="margin:0;">Machine Structures Course Staff @ UC Berkeley</p>
 									<p style="margin:0;">VR/AR Software Engineer Intern @ Nokia</p>
 									<p style="margin:0;">Avid developer, AR/CV enthusiast, and gamer.</p>
@@ -99,12 +98,13 @@
 					            	document.write("Good evening!");
 					            }
         					</script> </i> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with an EECS minor. Essentially, I'm learning a lot of computer science, HCI/AI, hardware, and UX related-things before I pursue an MBA to couple it with. Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.</p>
-							<footer>
+        					<p>Recently, I've also been doing a YouTube channel with application-based coding tutorials.  I learn CS theory and structures best when making real things, so I teach that to others here: https://www.youtube.com/bryantongc<footer>
 								<ul class="actions">
 									<li><a href="about.html" class="button">More Bio</a></li>
 								</ul>
 							</footer>
 						</div>
+						
 					</section>
 
 				<!-- Two -->
@@ -120,7 +120,7 @@
 									<header>
 										<h3>Software Engineering Intern<br />Nokia Bell Labs</h3>
 									</header>
-									<p>This summer, I'll be a Software Engineering Intern for Nokia Bell Labs division, working on creating innovative VR and AR technologies.</p>
+									<p>Last summer, I was Software Engineering Intern for Nokia Bell Labs.  I worked on sweet enterprise-scale apps, using React.js, ARKit, and more.</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="http://nokia.com/" class="button">Details</a></li>
@@ -134,7 +134,7 @@
 									<header>
 										<h3>Project Lead<br />Virtual Reality at Berkeley</h3>
 									</header>
-									<p>Last semester, I took over as Project Lead for VR@B's Augmented Reality Textbooks project.  Using our engine for textbooks, we brought a full-color, augmented reality version of <i>The Giving Tree</i> to life complete with animations and audio narriation.</p>
+									<p>This semester, I took over as Project Lead for VR@B's Augmented Reality Textbooks project.  In the past, we brought a full-color, augmented reality version of <i>The Giving Tree</i> to life complete with animations and audio narriation.  Now, we're exploring cutting-edge AR with Tango and ARKit thanks to our sponsors ASUS and Carl Zeiss.</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="http://vr.berkeley.edu/" class="button">Details</a></li>
@@ -197,7 +197,7 @@
 								<header>
 									<h3>Contact Me</h3>
 								</header>
-								<p>Currently traveling - replies in 48 hours at the latest.<br />
+								<p>Currently studying - please be patient with replies!<br />
 								Contact form via <a href="http://formspree.io/">Formspree</a>.
 								</p>
 								<ul class="icons">
