--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					            	document.write("Good evening!");
 					            }
         					</script> </i> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with an EECS minor. Essentially, I'm learning a lot of computer science, HCI/AI, hardware, and UX related-things before I pursue an MBA to couple it with. Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.</p>
-        					<p>Recently, I've also been doing a YouTube channel with application-based coding tutorials.  I learn CS theory and structures best when making real things, so I teach that to others here: https://www.youtube.com/bryantongc<footer>
+        					<p>Recently, I've also been doing a <a href="https://www.youtube.com/bryantongc" >YouTube channel</a> with application-based coding tutorials.  I learn CS theory and structures best when making real things, so I'm hoping to teach others who learn the same way!<footer>
 								<ul class="actions">
 									<li><a href="about.html" class="button">More Bio</a></li>
 								</ul>
