Index update, Google tracker added

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 							<div class="content">
 								<header>
 									<h1>Bryan Tong</h1>
-									<p style="margin:0;">Machine Structures Course Staff @ UC Berkeley</p>
-									<p style="margin:0;">VR/AR Software Engineer Intern @ Nokia</p>
-									<p style="margin:0;">Avid developer, AR/CV enthusiast, and gamer.</p>
+									<p style="margin:0;">CS Tutor @ UC Berkeley</p>
+									<p style="margin:0;">Former SWE Intern @ Nokia</p>
+									<p style="margin:0;">Avid developer, AR/VR enthusiast, and gamer.</p>
 								</header>
 								<!--<footer>
 									<ul class="actions">
@@ -97,7 +97,7 @@
 					            } else {
 					            	document.write("Good evening!");
 					            }
-        					</script> </i> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Cognitive Science with an EECS minor. Essentially, I'm learning a lot of computer science, HCI/AI, hardware, and UX related-things before I pursue an MBA to couple it with. Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.</p>
+        					</script> </i> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Computer Science and Cognitive Science. Essentially, I'm learning a lot of computer science, HCI/AI, hardware, and UX related-things before I pursue an MBA to couple it with. Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.</p>
         					<p>Recently, I've also been doing a <a href="https://www.youtube.com/bryantongc" >YouTube channel</a> with application-based coding tutorials.  I learn CS theory and structures best when making real things, so I'm hoping to teach others who learn the same way!<footer>
 								<ul class="actions">
 									<li><a href="about.html" class="button">More Bio</a></li>
@@ -115,7 +115,21 @@
 								<p>A brief overview</p>
 							</header>
 							<section class="spotlight">
-								<span class="image"><img src="images/nokia.jpeg" alt="" /></span>
+								<span class="image"><img src="images/whitespace.png" alt="Whitespace" /></span>
+								<div class="content">
+									<header>
+										<h3>Co-founder and Developer<br />Whitespace</h3>
+									</header>
+									<p>I'm one of four co-founders and the AR / VR / web developer for Whitespace, a startup looking to revolutionize online canvas shopping with a personal, futuristic touch.</p>
+									<footer>
+										<ul class="actions">
+											<li><a href="http://trywhitespace.com/" class="button">Details</a></li>
+										</ul>
+									</footer>
+								</div>
+							</section>
+							<section class="spotlight lined">
+								<span class="image"><img src="images/nokia.jpeg" alt="NBL" /></span>
 								<div class="content">
 									<header>
 										<h3>Software Engineering Intern<br />Nokia Bell Labs</h3>
@@ -129,7 +143,7 @@
 								</div>
 							</section>
 							<section class="spotlight lined">
-								<span class="image"><img src="images/vrab.png" alt="" /></span>
+								<span class="image"><img src="images/vrab.png" alt="VRAB" /></span>
 								<div class="content">
 									<header>
 										<h3>Project Lead<br />Virtual Reality at Berkeley</h3>
@@ -143,7 +157,7 @@
 								</div>
 							</section>
 							<section class="spotlight lined">
-								<span class="image"><img src="images/kite.png" alt="" /></span>
+								<span class="image"><img src="images/kite.png" alt="KL" /></span>
 								<div class="content">
 									<header>
 										<h3>Co-Founder, Developer<br />Kitelion Studios</h3>
