--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 							<div class="content">
 								<header>
 									<h1>Bryan Tong</h1>
-									<p style="margin:0;">CS Tutor @ UC Berkeley</p>
+									<p style="margin:0;">Co-founder of Whitespace AR</p>
+									<p style="margin:0;">Machine Structures Tutor @ UC Berkeley</p>
 									<p style="margin:0;">Former SWE Intern @ Nokia</p>
-									<p style="margin:0;">Avid developer, AR/VR enthusiast, and gamer.</p>
 								</header>
 								<!--<footer>
 									<ul class="actions">
