--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<header>
 									<h1>Bryan Tong</h1>
 									<p style="margin:0;">Co-founder of Whitespace AR</p>
-									<p style="margin:0;">Machine Structures Tutor @ UC Berkeley</p>
+									<p style="margin:0;">CS61A &amp; CS61C Tutor @ UC Berkeley</p>
 									<p style="margin:0;">Former SWE Intern @ Nokia</p>
 								</header>
 								<!--<footer>
