--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 					            } else {
 					            	document.write("Good evening!");
 					            }
-        					</script> </i> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Computer Science and Cognitive Science. Essentially, I'm learning a lot of computer science, HCI/AI, hardware, and UX related-things before I pursue an MBA to couple it with. Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.</p>
-        					<p>Recently, I've also been doing a <a href="https://www.youtube.com/bryantongc" >YouTube channel</a> with application-based coding tutorials.  I learn CS theory and structures best when making real things, so I'm hoping to teach others who learn the same way!<footer>
+        					</script> </i> I'm Bryan, a Bay Area native and current student at the University of California, Berkeley, pursuing a degree in Computer Science and Cognitive Science.  I've been dabbling in VR/AR, AR, HCI, and random hardware tinkering, though I plan to eventually pursue an MBA. Living and working in the local tech community is my dream, though I'd like to also run a boba cafe.</p>
+        					<p>Recently, I've also been doing a <a href="https://www.youtube.com/bryantongc" >YouTube channel</a> with some fun application-based coding tutorials.  This semester, I'm also a tutor for both CS 61A and CS 61C!<footer>
 								<ul class="actions">
+									<li><a href="resume.pdf" class="button big">Resume</a></li>
 									<li><a href="about.html" class="button">More Bio</a></li>
 								</ul>
 							</footer>
 						</div>
-						
 					</section>
 
 				<!-- Two -->
@@ -171,22 +171,6 @@
 								<span class="icon fa-camera-retro"><span class="label">Snapchatter</span></span></li><li>
 								<span class="icon fa-briefcase"><span class="label">Traveler</span></span></li>
 							</ul>
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section class="wrapper style3 special">
-						<div class="inner">
-							<header>
-								<h2>Resume</h2>
-								<p>Available right here as a PDF!<br />
-								Don't be afraid to shoot me an email if you have questions.</p>
-							</header>
-							<footer>
-								<ul class="actions">
-									<li><a href="resume.pdf" class="button big">Resume</a></li>
-								</ul>
-							</footer>
 						</div>
 					</section>
 
