gogo power rangers

--- a/changelog.html
+++ b/changelog.html
@@ -68,8 +68,9 @@
 								<p>No longer a corporate homepage!</p>
 							</header>
 							</div>
-							<p><h3>Latest revision date: Aug 6th, 2017</h3>
-							<li><strong>R5.2 - Added Nokia internship, updated side-projects and website homepage layout.</strong></li>
+							<p><h3>Latest revision date: Feb 10th, 2018</h3>
+							<li><strong>R5.5 - Lots of updates, Whitespace, etc.</strong></li>
+							<li>R5.2 - Added Nokia internship, updated side-projects and website homepage layout.</li>
 							<li>R5.0 - Complete redesign to integrate with hello.btong.me for recruiters.</li>
 							<li>R4.8 - Updated information on index.html to more accurately reflect my progress through projects and education!</li>
 							<li>R4.7 - Added a dropdown toolbar for "Tools" - random features
