--- a/teaching.html
+++ b/teaching.html
@@ -64,16 +64,90 @@
 						<div class="inner">
 						<div class="content"
 							<header class="major" align="center">
-								<h1>Generic Page</h1>
-								<p>Lorem ipsum dolor sit magna consectetur</p>
+								<h1>Teaching</h1>
+								<p>This semester, I'm teaching CS 61A's small group sessions and tutoring CS 61C.</p>
 							</header>
 							</div>
+							<!-- Text -->
+								<section>
+									<h2>CS 61A</h2>
+									<p>These are the resources for our <strong>CS 61A / CSM</strong> Small-Group sessions.<br />
+									My sections are <code>Monday, 2PM @ 283 Soda 283G</code> and <code>Tuesday, 11AM @ 293 Cory</code><br />
+									The worksheets start on Week 5.
+									</p>
+									<hr />
+
+									<!--
+									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<hr />
+									<h2>Heading Level 2</h2>
+									<h3>Heading Level 3</h3>
+									<h4>Heading Level 4</h4>
+									<hr />
+									<h3>Blockquote</h3>
+									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<h3>Preformatted</h3>
+									<pre><code>i = 0;
+
+									while (!deck.isInOrder()) {
+									    print 'Iteration ' + i;
+									    deck.shuffle();
+									    i++;
+									}
+
+									print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+								</section>-
 							<span class="image main"><img src="images/pic05.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>-->
+
+							<h3>61A Section Worksheets</h3>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Week</th>
+													<th>Topics</th>
+													<th>PDFs</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>5</td>
+													<td>Tree Recursion and Data Abstraction</td>
+													<td><a href="61a/csmSp18Week5.pdf">Blank PDF</a>
+														<a href="61a/csmSp18Week5Solutions.pdf">Solutions</a>
+													</td>
+												</tr>
+												<!--
+												<tr>
+													<td>6</td>
+													<td>tbd</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>7</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>8</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>9</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>-->
+											</tbody>
+										</table>
+									</div>
+								</section>
 						</div>
 					</section>
+
 
 				<!-- Footer -->
 					<section id="footer" class="wrapper split style2">
