--- a/projects.html
+++ b/projects.html
@@ -46,8 +46,8 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About Me</a></li>
+					<li><a href="teaching.html">Teaching</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="classes.html">Classes</a></li>
 					<!--<li><a href="elements.html">Elements</a></li>-->
 				</ul>
 				<ul class="actions vertical">
