--- a/arganvectors.html
+++ b/arganvectors.html
@@ -64,16 +64,14 @@
 						<div class="inner">
 						<div class="content"
 							<header class="major" align="center">
-								<h1>Teaching</h1>
-								<p>This semester, I'm teaching CS 61A's small group sessions and tutoring CS 61C.</p>
+								<h1>Arganvectors</h1>
+								<p>I am currently working on my dissertation on the discovery of Arganvectors.</p>
 							</header>
 							</div>
 							<!-- Text -->
 								<section>
-									<h2>CS 61A</h2>
-									<p>These are the resources for our <strong>CS 61A / CSM</strong> Small-Group sessions.<br />
-									My sections are <code>Monday, 2PM @ 283 Soda 283G</code> and <code>Tuesday, 11AM @ 293 Cory</code><br />
-									The worksheets start on Week 5.
+									<h2>Initial Thesis</h2>
+									<p>Check back soon for a link to this.
 									</p>
 									<hr />
 
@@ -102,49 +100,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>-->
 
-							<h3>61A Section Worksheets</h3>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Week</th>
-													<th>Topics</th>
-													<th>PDFs</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>5</td>
-													<td>Tree Recursion and Data Abstraction</td>
-													<td><a href="61a/csmSp18Week5.pdf">Blank PDF</a>
-														<a href="61a/csmSp18Week5Solutions.pdf">Solutions</a>
-													</td>
-												</tr>
-												<!--
-												<tr>
-													<td>6</td>
-													<td>tbd</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>7</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>8</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>9</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>-->
-											</tbody>
-										</table>
-									</div>
-								</section>
+						
 						</div>
 					</section>
 
