--- a/teaching.html
+++ b/teaching.html
@@ -116,16 +116,21 @@
 												<tr>
 													<td>5</td>
 													<td>Tree Recursion and Data Abstraction</td>
-													<td><a href="61a/csmSp18Week5.pdf">Blank PDF</a>
+													<td>
+														<a href="61a/csmSp18Week5.pdf">Blank PDF</a>
 														<a href="61a/csmSp18Week5Solutions.pdf">Solutions</a>
 													</td>
 												</tr>
-												<!--
+												
 												<tr>
 													<td>6</td>
-													<td>tbd</td>
-													<td>19.99</td>
+													<td>Lists and Trees</td>
+													<td>
+														<a href="61a/csmSp18Week6.pdf">Blank PDF</a>
+														<!--<a href="#">Solutions</a>-->
+													</td>
 												</tr>
+												<!--
 												<tr>
 													<td>7</td>
 													<td> Morbi faucibus arcu accumsan lorem.</td>
