add week 5 video

--- a/teaching.html
+++ b/teaching.html
@@ -117,8 +117,10 @@
 													<td>5</td>
 													<td>Tree Recursion and Data Abstraction</td>
 													<td>
-														<a href="61a/csmSp18Week5.pdf">Blank PDF</a>
-														<a href="61a/csmSp18Week5Solutions.pdf">Solutions</a>
+														<a href="61a/csmSp18Week5.pdf">Blank</a>
+														<a href="61a/csmSp18Week5Solutions.pdf">Sol</a>
+														<a href="https://www.youtube.com/watch?v=LGtai0ottUc">Video</a>
+
 													</td>
 												</tr>
 												
