Updated teaching to week 8

--- a/teaching.html
+++ b/teaching.html
@@ -129,20 +129,27 @@
 													<td>Lists and Trees</td>
 													<td>
 														<a href="61a/csmSp18Week6.pdf">Blank PDF</a>
-														<!--<a href="#">Solutions</a>-->
+														<a href="61a/csmSp18week6_sol.pdf">Solutions</a>
 													</td>
 												</tr>
-												<!--
+										
 												<tr>
 													<td>7</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
+													<td>Mutation and Nonlocal</td>
+													<td>
+														<a href="61a/csmSp18week7.pdf">Blank PDF</a>
+														<a href="61a/csmSp18week7_sol.pdf">Solutions</a>
+													</td>
 												</tr>
 												<tr>
 													<td>8</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
+													<td>OOP and Orders of Growth</td>
+													<td>
+														<a href="61a/csmSp1wWeek8.pdf">Blank PDF</a>
+														<a href="61a/csmSp18week8_sol.pdf">Solutions</a>
+													</td>
 												</tr>
+												<!--
 												<tr>
 													<td>9</td>
 													<td>Ante turpis integer aliquet porttitor.</td>
